# wine-classification-project

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
conf/: job_config.json  job_config.yml
wine_classification_project/modeling/: train.py
